Aligned introduction text and correct/wrong feedback properly. Fixed a global selector. HFJ-833

--- a/css/summary.css
+++ b/css/summary.css
@@ -39,9 +39,13 @@
 
 .h5p-summary .summary-evaluation-content {
   display: block;
-  position: relative;
   padding-right: 2em;
   font-size: 1.125em;
+  float: left;
+}
+
+.h5p-summary .summary-evaluation-content > p {
+  margin: 0;
 }
 
 .h5p-summary .summary-content li {
